# overity

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  todo.txt
snippets/: list_installed_pkgs.py  test_create_agent_pkg.py  test_create_agent_pkg_storage.py  test_create_package.py  test_extract_agent_pkg.py  test_extract_agent_pkg_storage.py  test_initialize_storage.py  test_load_method_info.py  test_load_package.py  test_load_program_info.py  test_report.py  test_traceability.py  test_training_methods.py  test_viz.py  vizualize_report.py
snippets/resources/: LSTM_binary_model_pruned_15_97.keras  SRU_binary_model_pruned_15_97_V2.keras
snippets/storage/: .gitignore  program.toml
snippets/storage/catalyst/execution_targets/: rp-pico.toml  visionfive2.toml
snippets/storage/ingredients/training_optimization/: lstm_init.py  lstm_init_nb.ipynb
src/overity/: __about__.py  __init__.py  __main__.py  errors.py
src/overity/api/: __init__.py
src/overity/backend/: __init__.py  bench.py  dataset.py  inference_agent.py  method.py  model.py  program.py  report.py
src/overity/backend/flow/: __init__.py  arguments.py  ctx.py
src/overity/backend/report_view/: topt_html.py
src/overity/bench/: abstraction.py
src/overity/exchange/: capability_toml.py  execution_target_toml.py  program_toml.py  report_json.py
src/overity/exchange/bench_abstraction/: file_py.py
src/overity/exchange/dataset_package/: __init__.py  metadata.py  package.py
src/overity/exchange/inference_agent_package/: __init__.py  metadata.py  package.py
src/overity/exchange/method_common/: description_md.py  file_ipynb.py  file_py.py
src/overity/exchange/model_package_v1/: metadata.py  package.py
src/overity/frontend/: __init__.py  types.py
src/overity/frontend/bench/: __init__.py
src/overity/frontend/dataset/: __init__.py  list_cmd.py
src/overity/frontend/inference_agent/: __init__.py  list_cmd.py
src/overity/frontend/method/: __init__.py  list_cmd.py
src/overity/frontend/model/: __init__.py  list_cmd.py
src/overity/frontend/program/: __init__.py  infos.py  init.py
src/overity/frontend/report/: __init__.py  list_cmd.py  prune.py  view.py
src/overity/frontend/utils/: __init__.py  table.py
src/overity/model/arguments/: __init__.py
src/overity/model/dataset/: __init__.py  metadata.py  package.py
src/overity/model/general_info/: bench.py  capability.py  method.py  program.py
src/overity/model/inference_agent/: __init__.py  metadata.py  package.py
src/overity/model/ml_model/: metadata.py  package.py
src/overity/model/report/: __init__.py
src/overity/storage/: base.py
src/overity/storage/local/: __init__.py
src/verity/: __about__.py  __init__.py  __main__.py  errors.py
src/verity/api/: __init__.py
src/verity/backend/: dataset.py  errors.py  flow.py  inference_agent.py  method.py  model.py  program.py  report.py
src/verity/backend/flow/: __init__.py  arguments.py  ctx.py  environment.py
src/verity/backend/report_view/: __init__.py  simple_server.py  topt_html.py
src/verity/bench/: __init__.py  abstraction.py
src/verity/exchange/: __init__.py  capability_toml.py  execution_target_toml.py  program_toml.py  report_json.py
src/verity/exchange/dataset_package/: __init__.py  metadata.py  package.py
src/verity/exchange/inference_agent_package/: __init__.py  metadata.py  package.py
src/verity/exchange/method_common/: __init__.py  description_md.py  file_ipynb.py  file_py.py
src/verity/exchange/model_package_v1/: __init__.py  metadata.py  package.py
src/verity/frontend/: __init__.py  types.py
src/verity/frontend/dataset/: __init__.py  list_cmd.py
src/verity/frontend/inference_agent/: __init__.py  list_cmd.py
src/verity/frontend/method/: __init__.py  list_cmd.py
src/verity/frontend/model/: __init__.py  list_cmd.py
src/verity/frontend/program/: __init__.py  infos.py  init.py
src/verity/frontend/report/: __init__.py  list_cmd.py  prune.py  view.py
src/verity/frontend/utils/: table.py
src/verity/model/arguments/: __init__.py
src/verity/model/dataset/: __init__.py  metadata.py  package.py
src/verity/model/general_info/: bench.py  capability.py  execution_target.py  method.py  program.py
src/verity/model/inference_agent/: __init__.py  metadata.py  package.py
src/verity/model/ml_model/: metadata.py  package.py
src/verity/model/report/: __init__.py  metrics.py
src/verity/model/traceability/: __init__.py
src/verity/storage/: <  base.py
src/verity/storage/local/: __init__.py
